<resources>
    <string name="app_name">FeelSave</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="hinzufuegen">Hinzufügen</string>
    <string name="notfallkontakte">Notfallkontakte</string>
    <string name="name">Name</string>
    <string name="nummer">Nummer</string>
    <string name="x">X</string>
    <string name="zeit_bis_zum_safe_modus">Zeit bis zum Safe Modus</string>
    <string name="info">Info</string>
    <string name="kontakt_ausw_hlen">Kontakt auswählen</string>
    <string name="sosbuttonText">SOS</string>
    <string name="notfallnachricht">Notfallnachricht</string>
    <string name="speichern">Speichern</string>
    <string name="notfallnachricht_bearbeiten">Notfallnachricht bearbeiten</string>
    <string name="zurück">Zurück</string>
    <string name="abmelden">Abmelden</string>
    <string name="email">Email</string>
    <string name="login">Anmeldung</string>
    <string name="passwort">Passwort</string>
    <string name="registrieren">Registrieren</string>
    <string name="remove_contact">Kontakt löschen</string>
    <string name="nameContactsListLayout">Name</string>
    <string name="phone_numberContactsLisLayout">Telefon</string>
    <string name="infodialog_title">Mit einem Knopfdruck sicherer.\n\n</string>
    <string name="infodialog1">1. Erlaube FeelSave alle nötigen Zugriffe!\n\n
                               2. Wähle Notfallkontakte in den Einstellungen aus\n\n
                               3. Personalisiere deine Notfallnachricht (oder lass sie so :))\n\n
                               4. Halte den Button wenn du dich unsicher fühlst, nach ein Paar Sekunden geht der SaveMode an\n\n
                               5. Lässt du nun den Finger ein Paar Sekunden vom Button ab, werden deine Notfallkontakte alamiert und bekommen deinen Standort \n\n
                               6. Für mehr Infos, besuche unsere Infoseite:\n\n</string>
    <string name="feelsaveinfolink">https://nayon0505.github.io/FeelSave-Infoseite/</string>
</resources>